# podcast_parser

./: .gitignore  404.html  README.md  article.py  index.html  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yaml
articles/: 6年治不好的口吃，竟是父母“逼”出来的？孩子的沉默求救，90%家长都没看懂.json  8岁前是全家焦点，妹妹出生后却成“问题儿童”？儿童人格统一性崩溃的真相太扎心！.json  争当第一VS全面发展：教育者该如何平衡孩子的野心与成长？.json  优越感是救赎还是深渊？儿童心理矛盾背后的真相.json  你越骂孩子懒，他越躺平？警惕：你的指责正在给孩子“造保护网”.json  你骂孩子"懒"时，他其实在偷偷松口气：别让你的焦虑，成了他的"保护伞".json  只惩罚行为却不解决根源？儿童教育最大的误区，90%家长都踩过！.json  妹妹出生后哥哥突然变“坏”？3招读懂儿童人格统一性，教师和家长别再错怪孩子！.json  孩子上学总捣乱是故意的？从整体人格视角看儿童行为，教师这样做更有效！.json  孩子屡教不改是本性坏？揭开儿童行为背后的人格密码，家长必看！.json  家长必看：过度期待正在摧毁孩子的抗挫力，你中招了吗？.json  被误解的“笨小孩”：左撇子儿童的困境与教育者的失职？.json  警惕！你越纠正孩子口吃，他越“装”得严重？阿德勒：这不是病，是孩子的求救信号.json  警惕！孩子总尿床、装病？别骂，这可能是他在“争宠”——小心掉入“优越感陷阱”.json  逃学、犯罪竟是“求关注”？问题儿童的心理呼救信号.json
docs/markdown/: .pages.yml  8岁前是全家焦点，妹妹出生后却成“问题儿童”？儿童人格统一性崩溃的真相太扎心！.md  争当第一VS全面发展：教育者该如何平衡孩子的野心与成长？.md  优越感是救赎还是深渊？儿童心理矛盾背后的真相.md  只惩罚行为却不解决根源？儿童教育最大的误区，90%家长都踩过！.md  妹妹出生后哥哥突然变“坏”？3招读懂儿童人格统一性，教师和家长别再错怪孩子！.md  孩子上学总捣乱是故意的？从整体人格视角看儿童行为，教师这样做更有效！.md  孩子屡教不改是本性坏？揭开儿童行为背后的人格密码，家长必看！.md  家长必看：过度期待正在摧毁孩子的抗挫力，你中招了吗？.md  被误解的“笨小孩”：左撇子儿童的困境与教育者的失职？.md  逃学、犯罪竟是“求关注”？问题儿童的心理呼救信号.md
htmls/: 解码孩子行为背后的心理密码-2ff904688b.html
jsons/: 解码孩子行为背后的心理密码-2ff904688b.json
markdown/8岁前是全家焦点，妹妹出生后却成“问题儿童”？儿童人格统一性崩溃的真相太扎心！/: index.html
markdown/争当第一VS全面发展：教育者该如何平衡孩子的野心与成长？/: index.html
markdown/优越感是救赎还是深渊？儿童心理矛盾背后的真相/: index.html
markdown/只惩罚行为却不解决根源？儿童教育最大的误区，90%家长都踩过！/: index.html
search/: search_index.json
src/: document_loader.py
(+26 files in other folders)
